# drp-python

./: .gitignore  .travis.yml  CONTRIBUTING.md  README.md  requirements.txt  setup.cfg  setup.py
drb-python/: __init__.py
drb-python/api/: api_http.py
drb-python/subnets_api/: subnets_http.py
drb_python/: __init__.py  api_http.py  base.py  drb_exceptions.py  http_exceptions.py  http_proxy.py  http_session.py  machine.py  machines_http.py  reservation.py  reservations_http.py  subnet.py  subnets_http.py
drb_python/exceptions/: drb_exceptions.py  http_exceptions.py
drb_python/model_layer/: subnet_config_model.py
drb_python/network_layer/: http_session.py
drb_python/translation_layer/: api_http.py  machines_http.py  reservations_http.py  subnets_http.py
drp_python/: __init__.py  machine.py  machines_http.py  params.py  reservation.py  subnet.py
drp_python/exceptions/: drb_exceptions.py  http_exceptions.py
drp_python/model_layer/: base_model.py  machine_config_model.py  machine_model.py  params_config_model.py  params_model.py  reservation_config_model.py  reservation_model.py  subnet_config_model.py  subnet_model.py
drp_python/network_layer/: http_session.py
drp_python/translation_layer/: api_http.py  machines_http.py  machines_translation.py  params_translation.py  reservations_http.py  reservations_translation.py  subnets_translation.py
test/: __init__.py
tests/e2e/: e2e_test.py
tests/functional/: create_machine_params_test.py  create_machines_test.py  create_reservations_test.py  create_subnets_test.py
tests/unit/: http_session_test.py  (+7 more)
(+2 files in other folders)
