[metadata]
name = drp-python
version = 0.1.0
home-page = https://github.com/cablelabs/drp-python
author = Dan Schrimpsher
author-email = d.schrimpsher@cablelabs.com
license='Apache 2.0',
description='Python Module to Support Digital Rebar API',
long_description='Python bindings to Digital Rebar API.',
classifiers=[
    'Topic :: System :: Installation/Setup'
   ],
   keywords='network boot, digital rebar, installation, NFV',

[files]
packages = drp_python

[pycodestyle]
max-line-length = 120
